# gimbal

./: README.md
gimbal_motion/: CMakeLists.txt  package.xml
gimbal_motion/src/: gimbal_motion_node.cpp
realsense_imu_mahony/: package.xml  setup.cfg  setup.py
realsense_imu_mahony/launch/: bringup_launch.py  rs_custom_launch.py
realsense_imu_mahony/realsense_imu_mahony/: imu_mahony_node.py
